INT_ARRAY, fix string oversize, fix '-' in tokenizer
- Added test for the - one

Took 14 minutes

Took 19 minutes